modified landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <!-- Top container -->
 <div class="w3-bar w3-top w3-black w3-large" style="z-index:4">
   <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>  Menu</button>
-  <span class="w3-bar-item w3-right">Compoint tech</span>
+  <span class="w3-bar-item w3-right">Compoint Technologies</span>
 </div>
 
 <!-- Sidebar/menu -->
@@ -27,7 +27,7 @@
       <img src="static/Compoint_logo.JPG" class="" style="width:46px;">
     </div>
     <div class="w3-col s8 w3-bar">
-      <span><h2>COMPOINT</h2></span><br>
+      <span><h2>COMPOINT</h2><h3>Technologies</h3></span><br>
       <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
       <a href="#" class="w3-bar-item w3-button"><i class="fa fa-user"></i></a>
       <a href="#" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
@@ -116,7 +116,7 @@
             <td>{{ product[1] }}</td>
             <td>{{ product[2] }}</td>
             <td>{{ product[3] }}</td>
-            <td>{{ product[4] }}</td>
+            <td><strong>{{ product[4] }}</strong></td>
             <td>{{ product[5] }}</td>
             <td><button onclick="" class="w3-button w3-green">Update</button><button onclick="" class="w3-button w3-red">Delete</button></td>
           </tr>
